src/sass/_NavBar.sass
// NavBar
// ––––––––––––––––––––––––––––––––––––––––––––––––––

$navbar-height: 6.6rem

.navbar
    font-size: 1.4rem
    width: 100%
    position: fixed
    top: 0
    height: $navbar-height
    line-height: $navbar-height
    vertical-align: middle
    font-weight: 600
    letter-spacing: 2px
    text-transform: uppercase
    text-decoration: none
    border-bottom: 0.1rem solid #eee
    z-index: 10
    background-color: #fff

    a
        color: $color-secondary

        &:hover
            color: $color-primary
        
        &.active
            color: $color-primary

.navbar-header
    float: left
    font-size: 2rem
    display: inline-block

    @media only screen and (max-width: $xs-device)
        display: inline

    .glyphicons
        font-size: 2.4rem


.navbar-collapse
    display: inline

    @media only screen and (max-width: $xs-device)
        width: 100%
        position: absolute
        top: $navbar-height
        left: 0px
        z-index: 9

.navbar-nav
    display: inline-block

    @media only screen and (max-width: $xs-device)
        display: inline

.navbar-list
    list-style: none
    margin: 0
    padding: 0
    float: left

    @media only screen and (max-width: $xs-device)
        background: #fff
        border-bottom: 0.1rem solid #eee
        float: none

    .glyphicons
        font-size: 1.8rem

.navbar-list > li
    margin: 0
    padding: 0 0 0 20px
    display: inline-block
    
    @media only screen and (max-width: $xs-device)
        display: list-item

.navbar-right
    float: right

    @media only screen and (max-width: $xs-device)
        float: none

.navbar-toggle
    display: none

    @media only screen and (max-width: $xs-device)
        display: inline
        float: right
        padding: 0
        margin: 0
        line-height: 6rem
        z-index: 11

    button
        width: 4.5rem
        height: 4.5rem
        padding: 0
        margin: 0
    
    span
        font-size: 2.4rem

.hidden
    @media only screen and (max-width: $xs-device)
        display: none

